Fix urlbar being overlapped by vertical bar

--- a/src/vertical-tabs.css
+++ b/src/vertical-tabs.css
@@ -207,6 +207,11 @@
 		}
 	}
 
+	/* Fix overlapping of urlbar by vertical tabs */
+	#urlbar {
+		z-index: 6;
+	}
+
 	/* Remove left margin in vertical layout from pinned tabs */
 	/* TODO: Refactor */
 	#tabbrowser-tabs[haspinnedtabs]:not([positionpinnedtabs])
